--- a/README.textile
+++ b/README.textile
@@ -1,26 +1,36 @@
-This is a mirror of http://www.vim.org/scripts/script.php?script_id=3374
+h1. ColorSelect for VIM
 
-Plugin to help write hexadecimals colors.
+_This is a mirror of http://www.vim.org/scripts/script.php?script_id=3374_
+
+h2. Install
+
+* If you use git to version your vim configs, and use "*pathogen*":https://github.com/tpope/vim-pathogen
+
+<pre><code>
+git submodule add git://github.com/kassio/ColorSelect.git bundle/ColorSelect
+</code></pre>
+
+* Else, download ColorSelect and copy contents of subdirectory plugin to ~/.vim/plugin
+
+h2. Dependencies
+
+You'll need ruby with gtk gems working, to this see the follow link:
+"Instalando Ruby-GTK no RVM":http://dannnylo.wordpress.com/2010/07/08/instalando-gtk-no-rvm/ 
+
+h2. Features
 
 This opens a gtk color dialog, when select a color this is writed on document.
 
-Command to call
-  ColorSelect
+Options
 
-  To add a shortcut
-  <pre><code>
-  "ColorSelect
-  imap <F5> <esc>:ColorSelect<CR>
-  </code></pre>
-  
-  Default result is in hexadecimal
-	  Default value returned in downcase, to change do return in UPPERCASE:
-	  <pre><code>
-	  g:CaseResultColorSelect='upcase'
-	  </code></pre>
+table{border-collapse: collapse; font-family: Verdana}.
+{background:#fff}.|_{border:1px solid #bbb; padding: 5px}. Variable                  |_{border:1px solid #bbb; padding: 5px}. Function                                |_{border:1px solid #bbb; padding: 5px}. Default     |_{border:1px solid #bbb; padding: 5px}. Possibles            |
+{background:#eee}.|={border:1px solid #bbb; padding: 5px}. g:FormatResultColorSelect |={border:1px solid #bbb; padding: 5px}. Sets the format returned by ColorSelect |={border:1px solid #bbb; padding: 5px}. hexadecimal |={border:1px solid #bbb; padding: 5px}. 'hex' or 'rgba'       |
+{background:#fff}.|={border:1px solid #bbb; padding: 5px}. g:CaseResultColorSelect   |={border:1px solid #bbb; padding: 5px}. Sets, in hex mode, case of return       |={border:1px solid #bbb; padding: 5px}. upcase      |={border:1px solid #bbb; padding: 5px}. 'upcase' or 'dowcase' |
 
-  If want values with rgba(with alpha value), set this:
-	<pre><code>
-	g:FormatResultColorSelect='rgba'
-	</code></pre>
+h2. To add a shortcut
 
+<pre><code>
+"ColorSelect
+imap <F5> <esc>:ColorSelect<CR>
+</code></pre>
